<resources>
    <string name="app_name">Multi Timer</string>
    <string name="sart_button">Start</string>
    <string name="stop_button">Pause</string>
    <string name="reset_button">Reset</string>
    <string name="set_button">Settings</string>

    <string name="set_name_button">Set Name</string>
    <string name="set_timer_button">Set Timer</string>
    <string name="delete_button">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
