<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".StopWatchFragment"
        android:id="@+id/timer_fragment"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/StopWatchFragmentColor">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/timer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name of timer:"
                        />

                    <TextView
                        android:id="@+id/timer_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00:00:00"
                        android:textSize="30sp"
                        />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/start_button_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sart_button" />
                    <Button
                        android:id="@+id/stop_button_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stop_button" />
                    <Button
                        android:id="@+id/reset_button_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_button" />

                    <Button
                        android:id="@+id/setting_button_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_button" />



                </LinearLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/SettingsFragmentColor"
                    android:id="@+id/settings_container"/>


            </LinearLayout>

        </FrameLayout>

    </LinearLayout>